#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.56)
AC_INIT(dotconfpp, 0.0.4a, a.krivoshey@kharkiv.com.ua)
AC_CONFIG_SRCDIR([src/dotconfpp.cc])
AC_CONFIG_HEADER([config.h])


AC_PROG_LIBTOOL

AM_INIT_AUTOMAKE(dotconfpp, 0.0.4a, a.krivoshey@kharkiv.com.ua)


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h string.h strings.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset realpath strchr strdup strerror])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/example1/Makefile
		 src/example2/Makefile])
AC_OUTPUT
